--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         I'm a mechanical engineering graduate
         looking for jobs in the Bay Area. I've
         worked on just about everything, like...
-        <span>Brain Implants</span>.
+        <span class="text-change">Brain Implants</span>
+        <span class="text-change">Baja</span>
+        <span class="text-change">Cars</span>
+        <span class="text-change">Wheels</span>
+        <!-- for each word you want to add copy and paste this :
+         <span class="text-change">word you want to add</span>
+         -->
       </p>
       <p>
         Want to get in touch? Contact me on 
@@ -52,7 +58,7 @@
     <h1 class="contentheading"> 
       I Specialize in Design, Simulation, and Manufacturing
     </h1>
-    <div id="page2text">
+    <div class="page2text">
       <h2>
         Design
       </h2>
@@ -85,6 +91,31 @@
     <h1 class="contentheading">
       I've interned at a wide range of companies
     </h1>
+    <div class="page3text">
+      <div class="company">
+        <img src="/assets/neuralink_logo.jpeg" alt="neuralink logo">
+        <div class="description">
+          <h2>Neuralink - Mechanical Engineer</h2>
+          <p>Jun 2024 - Aug 2024</p>
+          <p>Austin, Texas</p>
+        </div>
+      </div>
+      <div class="company">
+        <img src="/assets/apple_logo.jpeg" alt="apple logo">
+        <div class="description">
+          <h2>Apple - Manufacturing Design Engineer</h2>
+          <p>May 2023 - Jan 2024</p>
+          <p>Cupertino, California</p>
+        </div>
+      </div>
+      <div class="company">
+        <img src="/assets/andurilindustries_logo.jpeg" alt="anduril logo">
+        <div class="description">
+          <h2>Anduril Industries - Manufacturing Design Engineer</h2>
+          <p>May 2022 - Aug 2022</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="page">
     <h1 class="contentheading">
@@ -121,6 +152,106 @@
             The upright integrates with the rest of the rear suspension assembly, and is
             designed to have zero camber gain over travel.
           </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="page">
+    <h1 class="contentheading">CWRU Baja Design: Front Halfshafts</h1>
+    <div class="halfshaftscontainer">
+      <img src="/assets/halfshaft1.png" alt="half shaft" class="firsthalfshaftimg">
+      <p class="firsthalfshaftparagraph">
+        I designed our front half-shaft assembly for the 2022 season as well. It’s validated to take up to 2500 in-lbs with
+        a factor of safety of 1.5 or higher across the board. Using materials like Grade 5 Titanium and 7075-T6, our yokes
+        are able to achieve max angles of 57 degrees. It also uses bonded carbon fiber shafts in order keep the weight of
+        the entire shaft just under a pound.
+      </p>
+      <img class="secondhalfshaftimg" src="/assets/halfshaft2.webp" alt="half shaft closeup">
+      <p class="secondhalfshaftparagraph">
+        Because we use a double-wishbone suspension,
+        our shafts have to plunge inwards. We use ANSI
+        B.92 Splines to achieve this while also transferring
+        our torque requirement.
+      </p>
+      <img class="thirdhalfshaftimg" src="/assets/halfshaft3.png" alt="half shaft">
+      <div class="thirdhalfshaftparagraph">
+        <img class="fourthhalfshaftimg" src="/assets/halfshaft4.png" alt="half shaft">
+        <p>
+          I also designed custom fixturing to bond these half-shafts in an oven to meet our
+          torque transfer requirements.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <h1 class="contentheading">Other Projects</h1>
+    <div class="horizontalscroll">
+      <div class="contentcontainer">
+        <div class="project">
+          <img src="/assets/halfshaft2.webp" alt="example img">
+          <div class="projectcontent">
+            <h2>project heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore 
+              magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+              consequat. Duis aute irure dolor in reprehenderit in 
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+              Excepteur sint occaecat cupidatat non proident, sunt in 
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="/assets/baja3.webp" alt="example img">
+          <div class="projectcontent">
+            <h2>project heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore 
+              magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+              consequat. Duis aute irure dolor in reprehenderit in 
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+              Excepteur sint occaecat cupidatat non proident, sunt in 
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="/assets/baja4.webp" alt="example img">
+          <div class="projectcontent">
+            <h2>project heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore 
+              magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+              consequat. Duis aute irure dolor in reprehenderit in 
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+              Excepteur sint occaecat cupidatat non proident, sunt in 
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <br>
+            <img src="/assets/halfshaft3.png" alt="example again with scroll">
+          </div>
+        </div>
+        <div class="project">
+          <img src="/assets/baja3.webp" alt="example img">
+          <div class="projectcontent">
+            <h2>project heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore 
+              magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+              consequat. Duis aute irure dolor in reprehenderit in 
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+              Excepteur sint occaecat cupidatat non proident, sunt in 
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
         </div>
       </div>
     </div>
