--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     Happily, you can now provide a single vector graphic in SVG
     format. It will scale to any size, and still look crisp.
   -->
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
   <!-- This title shows up in the page's tab, next to the favicon -->
   <title>Jaffer Ali</title>
 </head>
@@ -49,7 +49,7 @@
       <p>
         Want to get in touch? Contact me on 
         <a href="https://www.linkedin.com/in/jaffer-ali-060b93190/" target="_blank">
-          <img class="inlineimg" src="/assets/linkedin.svg" alt="LinkedIn"/>
+          <img class="inlineimg" src="assets/linkedin.svg" alt="LinkedIn"/>
         </a>
       </p>
     </div>
@@ -85,7 +85,7 @@
         Apple.
       </p>
     </div>
-    <img id="simulation" src="/assets/page2asset.gif" alt="structural simulation"/>
+    <img id="simulation" src="assets/page2asset.gif" alt="structural simulation"/>
   </div>
   <div class="page">
     <h1 class="contentheading">
@@ -93,7 +93,7 @@
     </h1>
     <div class="page3text">
       <div class="company">
-        <img src="/assets/neuralink_logo.jpeg" alt="neuralink logo">
+        <img src="assets/neuralink_logo.jpeg" alt="neuralink logo">
         <div class="description">
           <h2>Neuralink - Mechanical Engineer</h2>
           <p>Jun 2024 - Aug 2024</p>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="company">
-        <img src="/assets/apple_logo.jpeg" alt="apple logo">
+        <img src="assets/apple_logo.jpeg" alt="apple logo">
         <div class="description">
           <h2>Apple - Manufacturing Design Engineer</h2>
           <p>May 2023 - Jan 2024</p>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="company">
-        <img src="/assets/andurilindustries_logo.jpeg" alt="anduril logo">
+        <img src="assets/andurilindustries_logo.jpeg" alt="anduril logo">
         <div class="description">
           <h2>Anduril Industries - Manufacturing Design Engineer</h2>
           <p>May 2022 - Aug 2022</p>
@@ -131,23 +131,23 @@
       </p>
       <div class="columncontainer">
         <div class="leftcolumn">
-          <img src="/assets/baja1.webp" alt="Axis and Vise fixture">
+          <img src="assets/baja1.webp" alt="Axis and Vise fixture">
           <p>
             This part was a 4th axis fixture along with a
             vise fixture. CAM was written in HSM and
             machine time was reduced from ~8 hrs to
             4.
           </p>
-          <img src="/assets/baja2.webp" alt="rear upright">
+          <img src="assets/baja2.webp" alt="rear upright">
         </div>
         <div class="rightcolumn">
-          <img src="/assets/baja3.webp" alt="nonlinear dynamic simulation">
+          <img src="assets/baja3.webp" alt="nonlinear dynamic simulation">
           <p>
             Nonlinear dynamic simulation of the entire assembly. In order to get more
             accurate results of various wheel impacts, and properly model the bearing stress
             on the upright, I ran FEA on the entire assembly instead of the individual part.
           </p>
-          <img src="/assets/baja4.webp" alt="rear upright">
+          <img src="assets/baja4.webp" alt="rear upright">
           <p>
             The upright integrates with the rest of the rear suspension assembly, and is
             designed to have zero camber gain over travel.
@@ -159,23 +159,23 @@
   <div class="page">
     <h1 class="contentheading">CWRU Baja Design: Front Halfshafts</h1>
     <div class="halfshaftscontainer">
-      <img src="/assets/halfshaft1.png" alt="half shaft" class="firsthalfshaftimg">
+      <img src="assets/halfshaft1.png" alt="half shaft" class="firsthalfshaftimg">
       <p class="firsthalfshaftparagraph">
         I designed our front half-shaft assembly for the 2022 season as well. It’s validated to take up to 2500 in-lbs with
         a factor of safety of 1.5 or higher across the board. Using materials like Grade 5 Titanium and 7075-T6, our yokes
         are able to achieve max angles of 57 degrees. It also uses bonded carbon fiber shafts in order keep the weight of
         the entire shaft just under a pound.
       </p>
-      <img class="secondhalfshaftimg" src="/assets/halfshaft2.webp" alt="half shaft closeup">
+      <img class="secondhalfshaftimg" src="assets/halfshaft2.webp" alt="half shaft closeup">
       <p class="secondhalfshaftparagraph">
         Because we use a double-wishbone suspension,
         our shafts have to plunge inwards. We use ANSI
         B.92 Splines to achieve this while also transferring
         our torque requirement.
       </p>
-      <img class="thirdhalfshaftimg" src="/assets/halfshaft3.png" alt="half shaft">
+      <img class="thirdhalfshaftimg" src="assets/halfshaft3.png" alt="half shaft">
       <div class="thirdhalfshaftparagraph">
-        <img class="fourthhalfshaftimg" src="/assets/halfshaft4.png" alt="half shaft">
+        <img class="fourthhalfshaftimg" src="assets/halfshaft4.png" alt="half shaft">
         <p>
           I also designed custom fixturing to bond these half-shafts in an oven to meet our
           torque transfer requirements.
@@ -188,7 +188,7 @@
     <div class="horizontalscroll">
       <div class="contentcontainer">
         <div class="project">
-          <img src="/assets/halfshaft2.webp" alt="example img">
+          <img src="assets/halfshaft2.webp" alt="example img">
           <div class="projectcontent">
             <h2>project heading</h2>
             <p>
@@ -204,7 +204,7 @@
           </div>
         </div>
         <div class="project">
-          <img src="/assets/baja3.webp" alt="example img">
+          <img src="assets/baja3.webp" alt="example img">
           <div class="projectcontent">
             <h2>project heading</h2>
             <p>
@@ -220,7 +220,7 @@
           </div>
         </div>
         <div class="project">
-          <img src="/assets/baja4.webp" alt="example img">
+          <img src="assets/baja4.webp" alt="example img">
           <div class="projectcontent">
             <h2>project heading</h2>
             <p>
@@ -234,11 +234,11 @@
               culpa qui officia deserunt mollit anim id est laborum.
             </p>
             <br>
-            <img src="/assets/halfshaft3.png" alt="example again with scroll">
+            <img src="assets/halfshaft3.png" alt="example again with scroll">
           </div>
         </div>
         <div class="project">
-          <img src="/assets/baja3.webp" alt="example img">
+          <img src="assets/baja3.webp" alt="example img">
           <div class="projectcontent">
             <h2>project heading</h2>
             <p>
