--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         I'm a mechanical engineering graduate
         looking for jobs in the Bay Area. I've
         worked on just about everything, like...
-        <span class="text-change">Brain Implants</span>
-        <span class="text-change">Baja</span>
-        <span class="text-change">Cars</span>
-        <span class="text-change">Wheels</span>
+        <span class="text-change">Brain Implants</span> 
+        <span class="text-change">Baja</span> 
+        <span class="text-change">Cars</span> 
+        <span class="text-change">Wheels</span> 
         <!-- for each word you want to add copy and paste this :
          <span class="text-change">word you want to add</span>
          -->
@@ -54,7 +54,7 @@
       </p>
     </div>
   </div>
-  <div class="page">
+  <div class="page page2">
     <h1 class="contentheading"> 
       I Specialize in Design, Simulation, and Manufacturing
     </h1>
