fix transitioning words expanding page

--- a/index.html
+++ b/index.html
@@ -37,14 +37,10 @@
       <p>
         I'm a mechanical engineering graduate
         looking for jobs in the Bay Area. I've
-        worked on just about everything, like...
-        <span class="text-change">Brain Implants</span> 
-        <span class="text-change">Baja</span> 
-        <span class="text-change">Cars</span> 
-        <span class="text-change">Wheels</span> 
-        <!-- for each word you want to add copy and paste this :
-         <span class="text-change">word you want to add</span>
-         -->
+        worked on just about everything, like... 
+        <span class="text-container">
+          <span class="text-change">Brain Implants</span>
+        </span>
       </p>
       <p>
         Want to get in touch? Contact me on 
