--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       CWRU Baja Design: Rear Upright
     </h1>
     <div class="bajacontentcontainer">
-      <p>
+      <p class="start">
         I completely redesigned our teams rear-upright for manufacturability 
         using a first-principles approach. I effectively cut the part's size 
         in half while maintaining all suspension-related requirements, 
@@ -137,7 +137,7 @@
           <img src="assets/baja2.webp" alt="rear upright">
         </div>
         <div class="rightcolumn">
-          <img src="assets/baja3.webp" alt="nonlinear dynamic simulation">
+          <img class="smaller" src="assets/baja3.webp" alt="nonlinear dynamic simulation">
           <p>
             Nonlinear dynamic simulation of the entire assembly. In order to get more
             accurate results of various wheel impacts, and properly model the bearing stress
@@ -172,7 +172,7 @@
       <img class="thirdhalfshaftimg" src="assets/halfshaft3.png" alt="half shaft">
       <div class="thirdhalfshaftparagraph">
         <img class="fourthhalfshaftimg" src="assets/halfshaft4.png" alt="half shaft">
-        <p>
+        <p class="center">
           I also designed custom fixturing to bond these half-shafts in an oven to meet our
           torque transfer requirements.
         </p>
